--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,11 @@
 {
-    "name": "user/laravel-auth-template",
-    "description": "Laravel-style template with authentication and pages.",
-    "require": {
-        "php": ">=8.0",
-        "laravel/framework": "^10.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        }
-    }
+  "name": "user/tourism-template",
+  "description": "Simple Laravel-style tourism agency starter template (placeholders).",
+  "require": {
+    "php": ">=8.0",
+    "laravel/framework": "^10.0"
+  },
+  "autoload": {
+    "psr-4": { "App\\": "app/" }
+  }
 }
